--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "typescript": "^5.5.3"
+    "@types/express": "^5.0.2",
+    "@types/jest": "^29.5.14",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^22.15.21",
+    "@types/supertest": "^6.0.3",
+    "typescript": "^5.8.3"
   },
   "private": true
 }
