--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "dev": "ts-node --loader ts-node/esm app.ts"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "nanoid": "^5.1.5"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.18",
     "jest": "^29.7.0",
     "supertest": "^7.1.1"
   }
