--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,9 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
+    "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
-    "supertest": "^7.1.1"
+    "supertest": "^7.1.1",
+    "ts-jest": "^29.3.4"
   }
 }
