--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.9.0",
     "mongoose": "^8.15.1",
     "next": "15.3.2",
+    "qr-code-styling": "^1.9.2",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
